syntax = "proto3";

package go_grpc_validator.echo;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.populate_all) = true;
option go_package = "github.com/at-ishikawa/go-grpc-validator/testdata/proto";

message EchoRequest {
  string message = 1 [(gogoproto.moretags) = "validate:\"min=8\""];
}

message EchoResponse {
  string message = 1;
}

service Echo {
  rpc UnaryEcho(EchoRequest) returns (EchoResponse) {}
}
